Fixed text size and alignment

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -196,7 +196,7 @@ body {
     position: absolute;
     right: 4%;
     top: 110px;
-    font-size: 300%;
+    font-size: 200%;
     color: #fff;
     z-index: 1;
     opacity: 0.1;
@@ -206,7 +206,7 @@ body {
 .packages-container .packages-box:hover .packages-content h2 {
     opacity: 1;
     font-weight: 800;
-    transform: translateY(-90px);
+    transform: translateY(-100px);
 }
 
 .packages-container .packages-box .packages-content h3 {
